--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,8 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 *.lcov
-
+.env.local
+.env
 # nyc test coverage
 .nyc_output
 
